<resources>
    <string name="app_name">Tuts</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="next">next</string>
    <string name="Hello">Hello</string>
    <string name="title_activity_other">OtherActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="item">News Feeds</string>
    <string name="item2">National Geographic</string>
    <string name="item3">Globe and Mail</string>
    <string name="item4">Entertainment</string>
    <string name="item5">Movies</string>
    <string name="item6">Other Activity</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="Settings">Settings</string>
    <string name="MenuSettings">Settings</string>
    <string name="title_activity_movie">movieActivity</string>
    <string name="title_activity_something">SomethingActivity</string>
    <string name="title_activity_movie_api">MovieAPI</string>
    <string name="pick_type">MovieAPI</string>
    <string name="settings_prefs">SettingsPrefs</string>
    

    <string name="title_activity_third">ThirdActivity</string>
    <string name="title_activity_rssfeed">RSSFeed</string>
    <string name="title_activity_display_details_rss">DisplayDetailsRss</string>
    <string name="title_activity_movie_details">MovieDetails</string>
    <string name="information">Information</string>
    <string name="remove_movie">Remove Movie</string>
    <string name="retrieve_genre">Retrieve by Genre</string>
    <string name="title_activity_rssfeeds">RSSFeeds</string>
    <string name="settings_activity">Settings Activity</string>


    <string name="transition_name_name">transition:NAME</string>
    <string name="transition_name_circle">transition:CIRCLE</string>
    <string name="transition_name_phone">transition:PHONE</string>
    <string name="no_results">No Results Available</string>
    <string name="movie_genres">Movie Genres</string>
    <string name="rssPic">rssPic</string>
    <string name="movie_pic">Movie Pic</string>
    <string name="robotPic">Robot Pic</string>
    <string name="overview">Overview</string>
    <string name="movieImage">MoviePic</string>
    <string name="movieTitle">Movie Title</string>
    <string name="movieSummary">Summary</string>
    <string name="castList">Cast List</string>
    <string name="movieType">Movie Type</string>
    <string name="saveMovie">Save Movie</string>
    <string name="releaseDate">Release Date</string>
    <string name="title">Title</string>
    <string name="movieThumbnail">Movie Image</string>
    <string name="rssFeeds">RSS FEEDS</string>
    <string name="myMovies">My Movies</string>
    <string name="enterSite">Enter Site</string>
    <string name="placeholder">Placeholder Text</string>
    <string name="title_activity_movie_web">MovieWeb</string>
</resources>
