<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:clickable="true"
    android:padding="8dp"
    android:elevation="8dp"
    android:id="@+id/custom_row_container" >

    <ImageView
        android:id="@+id/movieThumbnail"
        android:layout_width="@dimen/movie_thumbnail_width"
        android:layout_height="@dimen/movie_thumbnail_height"
        android:src="@drawable/ic_launcher"
        android:layout_centerVertical="true"
        android:contentDescription="@string/movieThumbnail" />

    <TextView
        android:id="@+id/movieTitle"
        android:textStyle="bold"
        android:textColor="@color/dark_gray"
        android:text="@string/title"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="5dp"
        android:alpha="0.87"
        android:gravity="right"
        android:padding="@dimen/size_half_byte"
        android:textSize="12sp"
        android:background="@drawable/ripple"
        android:dividerHeight="16.0sp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:layout_alignTop="@+id/movieThumbnail" />

    <TextView
        android:id="@+id/movieReleaseDate"
        android:text="@string/releaseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/movieTitle"
        android:alpha="0.87"
        android:padding="@dimen/size_half_byte"
        android:textSize="@dimen/textsSize" />

    <RatingBar
        android:id="@+id/movieVote"
        style="@android:style/Widget.Holo.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/movieReleaseDate"
        android:isIndicator="true"
        android:max="5"
        android:clickable="true" />
    <TextView
        android:id="@+id/saveMovie"
        android:text="@string/saveMovie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:textColor="@color/dark_gray"
        android:layout_below="@id/movieVote"
        android:textSize="@dimen/textsSize" />

</RelativeLayout>