<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:clipToPadding="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/main_root"
    android:weightSum="1" >

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@drawable/toolbar_shadow"
        android:elevation="12dp"
        android:clipToPadding="false"/>

    <Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:popupTheme="@style/MyCustomToolbarTheme"
        android:background="?android:attr/colorPrimary" />

        <include layout="@layout/app_bar"
            android:id="@+id/app_bar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/movie_layout"
        android:orientation="vertical"
        android:layout_alignParentEnd="true" >

        <android.support.v7.widget.RecyclerView
            android:id="@+id/list_my_movies"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#ccc"
            android:layout_weight="0.73"
            android:elevation="12dp"
            android:layout_marginRight="23dp"
            android:layout_marginBottom="23dp"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="73dp" />

    </LinearLayout>

    <com.github.fafaldo.fabtoolbar.widget.FABToolbarLayout
        android:id="@+id/fabtoolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:showDuration="600"
        app:hideDuration="200"
        app:rightMargin="10dp"
        app:bottomMargin="5dp"
        app:fadeInFraction="0.2" >

        <com.github.fafaldo.fabtoolbar.widget.FABContainer
            android:id="@+id/fabtoolbar_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fabtoolbar_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fabSize="normal"
                android:src="@drawable/abc_ic_menu_share_mtrl_alpha"/>

        </com.github.fafaldo.fabtoolbar.widget.FABContainer>

        <LinearLayout
            android:id="@+id/fabtoolbar_toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/fab_film"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="fitStart"
                android:src="@drawable/ic_theaters_black_24dp"
                android:contentDescription="@string/movie_pic" />

            <ImageView
                android:id="@+id/fab_img"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="center"
                android:src="@drawable/ic_robot"
                android:contentDescription="@string/robotPic" />

            <ImageView
                android:id="@+id/fab_rss"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="fitEnd"
                android:src="@drawable/ic_rss_96"
                android:contentDescription="@string/rssPic" />

        </LinearLayout>

    </com.github.fafaldo.fabtoolbar.widget.FABToolbarLayout>

</RelativeLayout>
    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/main_drawer"
        android:background= "#fff"
        android:layout_gravity= "start"
        app:menu="@menu/menu_drawer"
        app:itemIconTint="@color/accentColor"
        app:itemTextColor="#000"
        android:textStyle="bold"
        app:itemTextAppearance="@style/NavigationDrawerStyle"
        app:headerLayout="@layout/drawer_layout"/>

</android.support.v4.widget.DrawerLayout>
